# giggityflix-grpc-peer

./: README.md  pyproject.toml
protos/: base.proto  catalog.proto  commons.proto  file_operations.proto  media.proto  peer_edge.proto  webrtc.proto
scripts/: generate_protos.py
src/: __init__.py
src/giggityflix_grpc_peer/: __init__.py  base_pb2.py  base_pb2_grpc.py  catalog_pb2.py  catalog_pb2_grpc.py  commons_pb2.py  commons_pb2_grpc.py  file_operations_pb2.py  file_operations_pb2_grpc.py  media_pb2.py  media_pb2_grpc.py  webrtc_pb2.py  webrtc_pb2_grpc.py
