[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "giggityflix_grpc_peer"
version = "0.1.0"
description = "Shared gRPC interface definitions for communication between peer and edge services in the GiggityFlix ecosystem"
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
protobuf = "^4.24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
generate-protos = "scripts.generate_protos:main"
